Unable to select render passes when a render has fewer passes than one in another slot #76179

Closed
opened 2020-04-28 11:46:10 +02:00 by Alaska · 7 comments
Member

System Information:
Operating system: Linux
Graphics card: GTX 1050ti

Blender Version:
Broken: 2.82a release, 2.83 (133bf05b18 - 2020-04-27 19:14), 2.90 (fd0cb58122 - 2020-04-27 19:15)
Worked: Unsure

Short description of error:
In the image editor you can view your render result. While viewing your render results you can view different slots. And in each slot you can view different render passes. Let's name the render passes in numerical order for simplicity. Lets assume the render in slot 1 has 3 render passes and the render in slot 2 has 4. If you select the 4th render pass in slot two then switch back to slot 1, you will not be able to select which render pass you wish to preview. But if you select a render pass in slot 2 that's within the first 3 in the list, matching the total number of render passes in slot 1, you will be able to select which render pass you wish to view in slot 1.

I'm having a hard time explaining it, so here's a video:
2020-04-28 21-39-32.mp4

Exact steps for others to reproduce the error:

  1. Take any scene and render out a image.
  2. In the image editor with the "Render result" selected change to slot 2.
  3. Add a render pass to your render.
  4. Render out that image.
  5. Change your render pass in slot 2 to the last render pass in the list.
  6. Switch back to slot 1 and notice that the ability to chose which render pass you see is gone.

This issue will occur for every render pass you select that's from a spot lower down in the render pass list than other renders in other slots.

**System Information:** Operating system: Linux Graphics card: GTX 1050ti **Blender Version:** Broken: 2.82a release, 2.83 (133bf05b184b - 2020-04-27 19:14), 2.90 (fd0cb5812262 - 2020-04-27 19:15) Worked: Unsure **Short description of error:** In the image editor you can view your render result. While viewing your render results you can view different slots. And in each slot you can view different render passes. Let's name the render passes in numerical order for simplicity. Lets assume the render in slot 1 has 3 render passes and the render in slot 2 has 4. If you select the 4th render pass in slot two then switch back to slot 1, you will not be able to select which render pass you wish to preview. But if you select a render pass in slot 2 that's within the first 3 in the list, matching the total number of render passes in slot 1, you will be able to select which render pass you wish to view in slot 1. I'm having a hard time explaining it, so here's a video: [2020-04-28 21-39-32.mp4](https://archive.blender.org/developer/F8498876/2020-04-28_21-39-32.mp4) **Exact steps for others to reproduce the error:** 1. Take any scene and render out a image. 2. In the image editor with the "Render result" selected change to slot 2. 3. Add a render pass to your render. 4. Render out that image. 5. Change your render pass in slot 2 to the last render pass in the list. 6. Switch back to slot 1 and notice that the ability to chose which render pass you see is gone. This issue will occur for every render pass you select that's from a spot lower down in the render pass list than other renders in other slots.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-04-28 12:48:34 +02:00

This issue was referenced by 475bd6b829

This issue was referenced by 475bd6b829c38966b0fd4fdaff2eb61cc71c46c4
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Fixed with D7552

Thank you @lichtwerk for fixing this issue.

Fixed with [D7552](https://archive.blender.org/developer/D7552) Thank you @lichtwerk for fixing this issue.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76179
No description provided.